Refactor TestFhirPath